--- a/create_topoindex_dialog_base.ui
+++ b/create_topoindex_dialog_base.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>919</width>
-    <height>626</height>
+    <height>683</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,7 +23,7 @@
      <x>1</x>
      <y>3</y>
      <width>915</width>
-     <height>621</height>
+     <height>651</height>
     </rect>
    </property>
    <property name="currentIndex">
@@ -920,7 +920,7 @@
        <x>19</x>
        <y>134</y>
        <width>871</width>
-       <height>451</height>
+       <height>491</height>
       </rect>
      </property>
      <property name="minimumSize">
@@ -1202,7 +1202,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>Save grid files of runoff? Enter T (.true.) or F (.false.)</string>
+       <string>Save grid files of runoff? (True or False)</string>
       </property>
      </widget>
      <widget class="QComboBox" name="cmbRunoff2">
@@ -1361,8 +1361,8 @@
      <widget class="QComboBox" name="cmbFlag2">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>397</y>
+        <x>490</x>
+        <y>380</y>
         <width>69</width>
         <height>22</height>
        </rect>
@@ -1596,7 +1596,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>423</y>
+        <y>436</y>
         <width>701</width>
         <height>21</height>
        </rect>
@@ -1609,8 +1609,60 @@
       <property name="geometry">
        <rect>
         <x>210</x>
-        <y>420</y>
-        <width>241</width>
+        <y>435</y>
+        <width>351</width>
+        <height>27</height>
+       </rect>
+      </property>
+      <property name="options">
+       <set>QFileDialog::ShowDirsOnly</set>
+      </property>
+     </widget>
+     <widget class="QgsFileWidget" name="fwExeFile2">
+      <property name="geometry">
+       <rect>
+        <x>210</x>
+        <y>461</y>
+        <width>351</width>
+        <height>27</height>
+       </rect>
+      </property>
+      <property name="options">
+       <set>QFileDialog::ShowDirsOnly</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_96">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>461</y>
+        <width>191</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Select the TRIGRS.exe file</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_97">
+      <property name="geometry">
+       <rect>
+        <x>11</x>
+        <y>410</y>
+        <width>151</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>TRIGRS.ini location folder</string>
+      </property>
+     </widget>
+     <widget class="QgsFileWidget" name="fwTRIGRSFolder2">
+      <property name="geometry">
+       <rect>
+        <x>210</x>
+        <y>410</y>
+        <width>351</width>
         <height>27</height>
        </rect>
       </property>
@@ -1905,7 +1957,7 @@
        <x>10</x>
        <y>6</y>
        <width>891</width>
-       <height>581</height>
+       <height>621</height>
       </rect>
      </property>
      <property name="frameShape">
@@ -1963,8 +2015,8 @@
   <widget class="QPushButton" name="pbClose">
    <property name="geometry">
     <rect>
-     <x>839</x>
-     <y>625</y>
+     <x>840</x>
+     <y>653</y>
      <width>75</width>
      <height>30</height>
     </rect>
