--- a/create_topoindex_dialog_base.ui
+++ b/create_topoindex_dialog_base.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Create Topoindex.ini File for TRIGRS Map</string>
+   <string>TRIGRS Map Application</string>
   </property>
   <property name="windowIcon">
    <iconset>
@@ -27,7 +27,7 @@
     </rect>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="tab">
     <attribute name="title">
@@ -862,13 +862,13 @@
        </rect>
       </property>
       <property name="decimals">
-       <number>6</number>
+       <number>5</number>
       </property>
       <property name="maximum">
-       <double>1.000000000000000</double>
+       <double>10.000000000000000</double>
       </property>
       <property name="value">
-       <double>0.980665000000000</double>
+       <double>9.806649999999999</double>
       </property>
      </widget>
      <widget class="QLabel" name="label_61">
@@ -942,7 +942,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>Cohesion grid (c)</string>
+       <string>Cohesion grid (cfil)</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_72">
@@ -955,7 +955,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>Phi-angle grid (dep)</string>
+       <string>Phi-angle grid (phifil)</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_73">
@@ -968,7 +968,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>Depth grid (z)</string>
+       <string>Depth grid (zfil)</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_74">
@@ -981,7 +981,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>Total unit weight of soil grid (uws)</string>
+       <string>Total unit weight of soil grid (uwsfil)</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_75">
@@ -994,7 +994,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>Initial depth of water table grid (dep)</string>
+       <string>Initial depth of water table grid (depfil)</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_76">
@@ -1007,7 +1007,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>Diffusivity grid  (diff)</string>
+       <string>Diffusivity grid  (diffil)</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_79">
@@ -1020,7 +1020,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>Slope angle grid (d) </string>
+       <string>Slope angle grid (slofil) </string>
       </property>
      </widget>
      <widget class="QLabel" name="label_83">
@@ -1046,7 +1046,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>asci file TIdscelGrid (nxt)</string>
+       <string>asci file TIdscelGrid (nxtfil)</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_78">
@@ -1059,7 +1059,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>Initial infiltration rate grid   (rizero)</string>
+       <string>Initial infiltration rate grid   (rizerofil)</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_82">
@@ -1098,7 +1098,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>Saturated hydraulic conductivity grid   (Ks)</string>
+       <string>Saturated hydraulic conductivity grid   (ksfil)</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_84">
@@ -1409,97 +1409,6 @@
        <string>Create TRIGRS.exe</string>
       </property>
      </widget>
-     <widget class="QgsMapLayerComboBox" name="mlcCfil2">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>90</y>
-        <width>201</width>
-        <height>27</height>
-       </rect>
-      </property>
-      <property name="allowEmptyLayer">
-       <bool>true</bool>
-      </property>
-     </widget>
-     <widget class="QgsMapLayerComboBox" name="mlcPhifil2">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>140</y>
-        <width>201</width>
-        <height>27</height>
-       </rect>
-      </property>
-      <property name="allowEmptyLayer">
-       <bool>true</bool>
-      </property>
-     </widget>
-     <widget class="QgsMapLayerComboBox" name="mlcZfil2">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>190</y>
-        <width>201</width>
-        <height>27</height>
-       </rect>
-      </property>
-      <property name="allowEmptyLayer">
-       <bool>true</bool>
-      </property>
-     </widget>
-     <widget class="QgsMapLayerComboBox" name="mlcUwsfil2">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>240</y>
-        <width>201</width>
-        <height>27</height>
-       </rect>
-      </property>
-      <property name="allowEmptyLayer">
-       <bool>true</bool>
-      </property>
-     </widget>
-     <widget class="QgsMapLayerComboBox" name="mlcDepfil2">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>290</y>
-        <width>201</width>
-        <height>27</height>
-       </rect>
-      </property>
-      <property name="allowEmptyLayer">
-       <bool>true</bool>
-      </property>
-     </widget>
-     <widget class="QgsMapLayerComboBox" name="mlcDiffil2">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>340</y>
-        <width>201</width>
-        <height>27</height>
-       </rect>
-      </property>
-      <property name="allowEmptyLayer">
-       <bool>true</bool>
-      </property>
-     </widget>
-     <widget class="QgsMapLayerComboBox" name="mlcKsfil2">
-      <property name="geometry">
-       <rect>
-        <x>290</x>
-        <y>40</y>
-        <width>201</width>
-        <height>27</height>
-       </rect>
-      </property>
-      <property name="allowEmptyLayer">
-       <bool>true</bool>
-      </property>
-     </widget>
      <widget class="QgsMapLayerComboBox" name="mlcRifil2">
       <property name="enabled">
        <bool>false</bool>
@@ -1516,37 +1425,11 @@
        <bool>true</bool>
       </property>
      </widget>
-     <widget class="QgsMapLayerComboBox" name="mlcNxtfil2">
-      <property name="geometry">
-       <rect>
-        <x>290</x>
-        <y>140</y>
-        <width>201</width>
-        <height>27</height>
-       </rect>
-      </property>
-      <property name="allowEmptyLayer">
-       <bool>true</bool>
-      </property>
-     </widget>
-     <widget class="QgsMapLayerComboBox" name="mlcRizerofil2">
-      <property name="geometry">
-       <rect>
-        <x>290</x>
-        <y>90</y>
-        <width>201</width>
-        <height>27</height>
-       </rect>
-      </property>
-      <property name="allowEmptyLayer">
-       <bool>true</bool>
-      </property>
-     </widget>
      <widget class="QLineEdit" name="leOutputFile2">
       <property name="geometry">
        <rect>
-        <x>520</x>
-        <y>360</y>
+        <x>640</x>
+        <y>340</y>
         <width>133</width>
         <height>20</height>
        </rect>
@@ -1670,6 +1553,96 @@
        <set>QFileDialog::ShowDirsOnly</set>
       </property>
      </widget>
+     <widget class="QgsFileWidget" name="fwNxtfil2">
+      <property name="geometry">
+       <rect>
+        <x>290</x>
+        <y>140</y>
+        <width>231</width>
+        <height>27</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QgsFileWidget" name="fwCfil2">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>90</y>
+        <width>241</width>
+        <height>27</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QgsFileWidget" name="fwPhifil2">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>140</y>
+        <width>241</width>
+        <height>27</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QgsFileWidget" name="fwZfil2">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>190</y>
+        <width>241</width>
+        <height>27</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QgsFileWidget" name="fwUwsfil2">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>240</y>
+        <width>241</width>
+        <height>27</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QgsFileWidget" name="fwDepfil2">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>290</y>
+        <width>241</width>
+        <height>27</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QgsFileWidget" name="fwDiffil2">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>340</y>
+        <width>241</width>
+        <height>27</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QgsFileWidget" name="fwKsfil2">
+      <property name="geometry">
+       <rect>
+        <x>290</x>
+        <y>40</y>
+        <width>231</width>
+        <height>27</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QgsFileWidget" name="fwRizerofil2">
+      <property name="geometry">
+       <rect>
+        <x>290</x>
+        <y>90</y>
+        <width>231</width>
+        <height>27</height>
+       </rect>
+      </property>
+     </widget>
     </widget>
     <widget class="QLineEdit" name="leRow2">
      <property name="enabled">
@@ -1748,22 +1721,6 @@
        <string>CUws</string>
       </property>
      </widget>
-     <widget class="QDoubleSpinBox" name="spbCuws2">
-      <property name="geometry">
-       <rect>
-        <x>375</x>
-        <y>21</y>
-        <width>60</width>
-        <height>22</height>
-       </rect>
-      </property>
-      <property name="maximum">
-       <double>100000.000000000000000</double>
-      </property>
-      <property name="value">
-       <double>13400.000000000000000</double>
-      </property>
-     </widget>
      <widget class="QLabel" name="label_67">
       <property name="geometry">
        <rect>
@@ -1803,101 +1760,6 @@
        <string>CPhi</string>
       </property>
      </widget>
-     <widget class="QDoubleSpinBox" name="spbCdep2">
-      <property name="geometry">
-       <rect>
-        <x>600</x>
-        <y>21</y>
-        <width>56</width>
-        <height>22</height>
-       </rect>
-      </property>
-      <property name="value">
-       <double>5.000000000000000</double>
-      </property>
-     </widget>
-     <widget class="QDoubleSpinBox" name="spbCphi2">
-      <property name="geometry">
-       <rect>
-        <x>148</x>
-        <y>21</y>
-        <width>56</width>
-        <height>22</height>
-       </rect>
-      </property>
-      <property name="decimals">
-       <number>2</number>
-      </property>
-      <property name="maximum">
-       <double>10000.000000000000000</double>
-      </property>
-      <property name="singleStep">
-       <double>0.100000000000000</double>
-      </property>
-      <property name="value">
-       <double>24.500000000000000</double>
-      </property>
-     </widget>
-     <widget class="QDoubleSpinBox" name="spbCc2">
-      <property name="geometry">
-       <rect>
-        <x>38</x>
-        <y>21</y>
-        <width>56</width>
-        <height>22</height>
-       </rect>
-      </property>
-      <property name="decimals">
-       <number>1</number>
-      </property>
-      <property name="maximum">
-       <double>10000.000000000000000</double>
-      </property>
-      <property name="singleStep">
-       <double>0.100000000000000</double>
-      </property>
-      <property name="value">
-       <double>5100.000000000000000</double>
-      </property>
-     </widget>
-     <widget class="QDoubleSpinBox" name="spbCzmax2">
-      <property name="geometry">
-       <rect>
-        <x>264</x>
-        <y>21</y>
-        <width>56</width>
-        <height>22</height>
-       </rect>
-      </property>
-      <property name="decimals">
-       <number>2</number>
-      </property>
-      <property name="maximum">
-       <double>10000.000000000000000</double>
-      </property>
-      <property name="singleStep">
-       <double>0.100000000000000</double>
-      </property>
-      <property name="value">
-       <double>5.000000000000000</double>
-      </property>
-     </widget>
-     <widget class="QDoubleSpinBox" name="spbCrizero2">
-      <property name="geometry">
-       <rect>
-        <x>492</x>
-        <y>21</y>
-        <width>56</width>
-        <height>22</height>
-       </rect>
-      </property>
-      <property name="maximum">
-       <double>100000.000000000000000</double>
-      </property>
-      <property name="value">
-       <double>0.000000000000000</double>
-      </property>
-     </widget>
      <widget class="QLabel" name="lCdif">
       <property name="geometry">
        <rect>
@@ -1934,7 +1796,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>0.00000082</string>
+       <string>8.2e-07</string>
       </property>
      </widget>
      <widget class="QLineEdit" name="leCks2">
@@ -1947,7 +1809,85 @@
        </rect>
       </property>
       <property name="text">
-       <string>0.00000082</string>
+       <string>8.2e-08</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="leCc2">
+      <property name="geometry">
+       <rect>
+        <x>37</x>
+        <y>20</y>
+        <width>65</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>5.1e+03</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="leCphi2">
+      <property name="geometry">
+       <rect>
+        <x>140</x>
+        <y>20</y>
+        <width>65</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>24.5</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="leCzmax2">
+      <property name="geometry">
+       <rect>
+        <x>270</x>
+        <y>20</y>
+        <width>31</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>5</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="leCuws2">
+      <property name="geometry">
+       <rect>
+        <x>370</x>
+        <y>20</y>
+        <width>61</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>1.34e+04</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="leCrizero2">
+      <property name="geometry">
+       <rect>
+        <x>500</x>
+        <y>20</y>
+        <width>31</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>0</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="leCdep2">
+      <property name="geometry">
+       <rect>
+        <x>600</x>
+        <y>20</y>
+        <width>31</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>5</string>
       </property>
      </widget>
     </widget>
@@ -2064,23 +2004,8 @@
   <tabstop>spbNper2</tabstop>
   <tabstop>spbZmin2</tabstop>
   <tabstop>spbUww2</tabstop>
-  <tabstop>spbCc2</tabstop>
-  <tabstop>spbCphi2</tabstop>
-  <tabstop>spbCzmax2</tabstop>
-  <tabstop>spbCuws2</tabstop>
-  <tabstop>spbCrizero2</tabstop>
-  <tabstop>spbCdep2</tabstop>
   <tabstop>leCdif2</tabstop>
   <tabstop>leCks2</tabstop>
-  <tabstop>mlcCfil2</tabstop>
-  <tabstop>mlcPhifil2</tabstop>
-  <tabstop>mlcZfil2</tabstop>
-  <tabstop>mlcUwsfil2</tabstop>
-  <tabstop>mlcDepfil2</tabstop>
-  <tabstop>mlcDiffil2</tabstop>
-  <tabstop>mlcKsfil2</tabstop>
-  <tabstop>mlcRizerofil2</tabstop>
-  <tabstop>mlcNxtfil2</tabstop>
   <tabstop>mlcRifil2</tabstop>
   <tabstop>cmbRunoff2</tabstop>
   <tabstop>cmbSafetyMax2</tabstop>
